purchase, footer, preauthorize changes

--- a/src/main/js/frontend/src/App.css
+++ b/src/main/js/frontend/src/App.css
@@ -1,4 +1,7 @@
+
 .app-container {
     background-color: slategray;
     min-height: 100vh;
+    position: relative;
+    padding-bottom: 3.5rem;
 }
