--- a/src/main/js/frontend/src/css/styles.css
+++ b/src/main/js/frontend/src/css/styles.css
@@ -15,3 +15,17 @@
     width: 110px;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h5 {
+    color: white;
+}
